# sm-utils

./: .gitignore  CMakeLists.txt  README.md
include/: Hints.hpp  OdeSolver.hpp  OdeSystem.hpp  Vector.hpp
src/: CMakeLists.txt  EulerTest.cpp  OdeSolver.cpp  OdeSystem.cpp
